#9 회원가입, 로그인 화면 개발 & 회원가입 기능 개발 (#11)
* #7 메인 화면 개발
- header, footer.pug 개발
- index.pug 레이아웃 개발

* 회원가입, 로그인 화면 개발 & 회원가입 기능 개발

* 유저 생년월일 수정

Co-authored-by: byeongwan <byeongco93@gmail.com>

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,10 @@
-html
+doctype html
+html(len="ko")
   head
     link(rel="stylesheet", href="/public/css/index.css")
-    script(defer src="/public/js/index.js")
+    link(rel="stylesheet", href="/public/css/join.css")
+    link(rel="stylesheet", href="/public/css/login.css")
+    script(src="/public/js/index.js", defer)
   body
     header
       div.header__inner
@@ -92,4 +95,3 @@ html
               li TEL : 1522-3232
               li 개인정보 책임자 : 하익성
           span ⓒ 2021 Starbucks Coffee Company. All Rights Reserved.
-
