--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,7 @@
 extends layout
-
+block src
+  link(rel="stylesheet", href=`/public/css/${title}.css`)
+  script(src=`/public/js/${title}.js`, defer)
 block content
   div.badge
     img(src="../public/images/badge.png")
