--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,8 @@
 doctype html
 html(len="ko")
   head
-    link(rel="stylesheet", href="/public/css/index.css")
-    link(rel="stylesheet", href="/public/css/join.css")
-    link(rel="stylesheet", href="/public/css/login.css")
-    script(src="/public/js/index.js", defer)
+    link(rel="stylesheet", href=`/public/css/layout.css`)
+    block src
   body
     header
       div.header__inner
