header toggle 개발, src(css,js) layout.pug로 이동

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html(len="ko")
   head
     link(rel="stylesheet", href=`/public/css/layout.css`)
     link(rel="stylesheet", href=`/public/css/${title}.css`)
+    script(src=`/public/js/layout.js`, defer)
     script(src=`/public/js/${title}.js`, defer)
   body
     header
