--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,3 @@
-.container {
-  // 공통 부분 있다면 추가 필요
-}
 .badge {
   position: fixed;
   width: 140px;
@@ -26,7 +23,7 @@
   max-width: 242px;
   position: absolute;
   left: 20%;
-  top: 20%;
+  top: 25%;
 }
 .container__top__btn {
   display: block;
@@ -38,9 +35,8 @@
   font-size: 15px;
   cursor: pointer;
   background-color: transparent;
-  transition: background-color 0.5s;
+  transition: background-color 0.5s, opacity 0.5s;
   opacity: 0;
-  transition: opacity 0.5s;
 }
 .container__top__btn.active {
   opacity: 1;
@@ -52,20 +48,20 @@
 .container__top__coldbrew {
   max-width: 359px;
   position: absolute;
-  left: 42%;
-  bottom: 30%;
+  left: 40%;
+  bottom: 10%;
 }
 .container__top__blended {
   max-width: 487px;
   position: absolute;
   left: 55%;
-  top: 18%;
+  top: 25%;
 }
 .container__top__ade {
   max-width: 391px;
   position: absolute;
-  left: 68%;
-  bottom: 30%;
+  left: 70%;
+  bottom: 10%;
 }
 .container__notice {
   height: 62px;
@@ -124,7 +120,6 @@
 }
 .container__reward__wrapper {
   color: #fff;
-  letter-spacing: 0.5px;
   width: 55%;
   height: 100%;
   display: flex;
@@ -151,8 +146,8 @@
   background-color: #00704a;
   border: 2px solid #00704a;
   height: 38px;
-  padding-left: 18.5px;
-  padding-right: 18.5px;
+  padding-left: 18px;
+  padding-right: 18px;
   font-size: 14px;
   color: #fff;
   border-radius: 5px;
@@ -166,8 +161,8 @@
   background-color: transparent;
   border: 2px solid #fff;
   height: 38px;
-  padding-left: 18.5px;
-  padding-right: 18.5px;
+  padding-left: 18px;
+  padding-right: 18px;
   font-size: 14px;
   color: #fff;
   border-radius: 5px;
@@ -177,6 +172,7 @@
   top: 50px;
 }
 .container__reward__btn--egift {
+  position: relative;
   width: 183px;
   height: 38px;
   border: 2px solid #fff;
@@ -345,7 +341,7 @@
   transition: right 2s;
 }
 .container__store__right.active {
-  right: -20%;
+  right: -25%;
 }
 .container__store__right button {
   color: #222;
