--- a/views/login.pug
+++ b/views/login.pug
@@ -11,6 +11,8 @@ block content
             span Welcome!
             |  스타벅스커피 코리아에 오신 것을 환영합니다 
           .content__input-container
+            if msg
+              .error=msg
             .input
               input.input__item(type="text", placeholder="아이디를 입력해 주세요.", name="id", required, id="id")
               input.input__item(type="password", placeholder="비밀번호를 입력해 주세요.", name="pwd", required)
