--- a/public/css/join.css
+++ b/public/css/join.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+.error {
+  background-color: rgba(255, 0, 0, 0.1);
+  height: 50px;
+  margin-bottom: 20px;
+  border-radius: 3px;
+  color: rgb(220, 1, 1);
+  text-align: center;
+  padding-top: 12px;
+}
+
 .join-form-container {
   max-width: 570px;
   margin: auto;
