--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+.error {
+  background-color: rgba(255, 0, 0, 0.1);
+  height: 50px;
+  margin-bottom: 20px;
+  border-radius: 3px;
+  color: rgb(220, 1, 1);
+  text-align: center;
+  padding-top: 12px;
+}
+
 .bg-wrap {
   background-image: url("../images/login_bg.jpg");
   background-attachment: fixed;
