--- a/views/mixins/suggetionList.pug
+++ b/views/mixins/suggetionList.pug
@@ -2,7 +2,7 @@ mixin suggetionList(suggetion, index)
   tr
     td #{index+1}
     td
-      a(href=`/edit/${suggetion._id}`)=suggetion.title
+      a(href=`/${suggetion._id}`)=suggetion.title
     td=suggetion.createdAt
     td=suggetion.answeredAt
     td=suggetion.status
