--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -29,24 +29,40 @@ a:hover {
   text-decoration: underline;
 }
 
+.form {
+  position: relative;
+}
+
+.block {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  z-index: 5;
+  width: 815px;
+  height: 425px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Icon */
 .icon--arrow-down {
-  background: url("../images/icon-arrow-down.png");
+  background: url('../images/icon-arrow-down.png');
 }
 .icon--arrow-up {
-  background: url("../images/icon-arrow-up.png");
+  background: url('../images/icon-arrow-up.png');
 }
 .icon--notice {
   width: 9px;
   height: 9px;
   margin: 0 5px;
-  background: url("../images/icon-red-star.gif");  
+  background: url('../images/icon-red-star.gif');
 }
 
 /* Title */
 .title {
   height: 178px;
-  background: url("../images/bg-ms.jpg");
+  background: url('../images/bg-ms.jpg');
 }
 .title .title__container {
   width: 70%;
@@ -85,7 +101,7 @@ a:hover {
 }
 .content__suggestion {
   border-radius: 3px;
-  background: #f4f4f2 url("../images/bg-suggestion2.png") 540px bottom no-repeat;
+  background: #f4f4f2 url('../images/bg-suggestion2.png') 540px bottom no-repeat;
   padding: 30px;
   margin-bottom: 30px;
 }
@@ -95,7 +111,7 @@ a:hover {
   color: var(--black-color);
 }
 /* li 2번부터 4번까지 */
-.content__suggestion ul li:nth-child(n+2):nth-child(-n+4) {
+.content__suggestion ul li:nth-child(n + 2):nth-child(-n + 4) {
   font-size: var(--font-medium);
   color: var(--black-grey-color);
 }
@@ -125,7 +141,7 @@ a:hover {
 
 /* Form */
 .content__form__notice {
-  display: flex;  
+  display: flex;
   align-items: center;
   justify-content: flex-end;
 }
@@ -136,13 +152,13 @@ a:hover {
 }
 .content__form__row {
   display: flex;
-  height: 47px;  
+  height: 47px;
   border-bottom: 1px solid #e0e0e0;
 }
 .content__form__row:first-child {
   border-top: 1px solid var(--black-color);
 }
-.content__form__row.form--content{
+.content__form__row.form--content {
   height: 221px;
 }
 .content__form__row-title {
@@ -163,7 +179,7 @@ a:hover {
 }
 .content__form__row input {
   border: 1px solid var(--input-border-color);
-  border-radius: 3px;  
+  border-radius: 3px;
   height: 26px;
   padding: 0;
 }
@@ -189,11 +205,11 @@ a:hover {
 }
 .phone-select {
   width: var(--input-small);
-  height: 28px;  
+  height: 28px;
 }
 .hyphen {
-  color: var(--black-grey-color);    
-  font-size: var(--font-large);    
+  color: var(--black-grey-color);
+  font-size: var(--font-large);
   width: 20px;
   text-align: center;
 }
@@ -202,7 +218,7 @@ a:hover {
 }
 .content__form__row__btn {
   display: flex;
-  justify-content: flex-end;  
+  justify-content: flex-end;
 }
 /* Navigation */
 .content > nav {
