--- a/views/myStarbucks.pug
+++ b/views/myStarbucks.pug
@@ -29,10 +29,16 @@ block content
         p
           a(href="/suggetion") <b>고객의 소리 문의 하기</b>
       section.content__list
-        ul.content__menu-list
-          li.active 전체 #{suggetions.length}
-          li 접수완료 #{waitingSuggetions.length}
-          li 답변완료 #{completedSuggetions.length}
+        if user.isAdmin 
+          ul.content__menu-list
+              li.active 전체 #{allSuggestions.length}
+              li 접수완료 #{allWaitingSuggetions.length}
+              li 답변완료 #{allCompletedSuggetions.length}
+        else
+          ul.content__menu-list
+            li.active 전체 #{suggetions.length}
+            li 접수완료 #{waitingSuggetions.length}
+            li 답변완료 #{completedSuggetions.length}
         table
           thead
             tr
@@ -42,11 +48,18 @@ block content
               th 답변예정일
               th 답변여부
           tbody
-            each suggetion,index in suggetions
-              +suggetionList(suggetion, index)
+            if user.isAdmin
+              each suggetion,index in allSuggestions
+                +suggetionList(suggetion, index)
+              else
+                tr
+                  td(colspan=5) 데이터가 없습니다.
             else
-              tr
-                td(colspan=5) 데이터가 없습니다.
+              each suggetion,index in suggetions
+                +suggetionList(suggetion, index)
+              else
+                tr
+                  td(colspan=5) 데이터가 없습니다.
               
     nav
       ul
