--- a/public/css/login.css
+++ b/public/css/login.css
@@ -15,7 +15,7 @@
 }
 
 .bg-wrap {
-  background-image: url("../images/login_bg.jpg");
+  background-image: url('../images/login_bg.jpg');
   background-attachment: fixed;
 }
 
