--- a/views/join.pug
+++ b/views/join.pug
@@ -1,11 +1,10 @@
 extends layout 
 
-block content
-  script(src="/public/js/join.js", defer) 
+block content  
   .join-form-container
     .join-form-container__title 회원가입
-    if msg
-      .error=msg
+    if messages.error
+      .error=messages.error    
     form.join-form-container__content(action="/user/join", method="POST")
       .content
         .content__guide-block
